crustrace-core/tests/snapshots/patterns__pub_in_path_const_function.snap
---
source: crustrace-core/tests/patterns.rs
expression: apply_trace_all(input)
---
pub(in crate::utils) const fn hello() {
    let __tracing_attr_span = tracing::span!(tracing::Level::INFO, "hello");
    let __tracing_attr_guard = __tracing_attr_span.enter();
    {
        println!("world");
    }
}
